Made corrections in the svg clip paths so that it works on Firefox as well (it wasn't working before)

--- a/game_1/assets/css/styles.less
+++ b/game_1/assets/css/styles.less
@@ -207,7 +207,7 @@ a {
 	#help {
 		.active; background:@white; .rounded(8px); .absPosBottom(25px,25px); padding:25px; width:924px; height:668px; .shadowed(0,2px,5px); .transition(all .2s ease-in-out);
 		&:hover { background:@white; }
-		&.hidden { .rounded(50%); .centeredText; .absPosBottom(25px,25px); width:50px; height:27px; padding:13px 0 10px; &:hover { background:@green; color:@white; } }		
+		&.hidden { .rounded(50%); .centeredText; .absPosBottom(25px,25px); width:50px; height:27px; padding:13px 0 10px; .bold; &:hover { background:@green; color:@white; } }		
 		.close_button { .active; .absPosRight(-12px,-12px); width:25px; height:25px; .centeredText; background:@red; color:@white; .rounded(50%); .transition(all .2s ease-in-out); &:hover { background:@textGray; color:@white; } }
 	}
 	#popup {
